--- a/tire_catalog/i18n/es.po
+++ b/tire_catalog/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-06 10:43+0000\n"
-"PO-Revision-Date: 2018-07-06 12:48+0200\n"
+"POT-Creation-Date: 2018-07-09 11:28+0000\n"
+"PO-Revision-Date: 2018-07-09 13:29+0200\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -155,7 +155,7 @@ msgstr "75"
 #. module: tire_catalog
 #: selection:product.template,season:0
 msgid "All season"
-msgstr "All season"
+msgstr "Toda la temporada"
 
 #. module: tire_catalog
 #: model:ir.model.fields,field_description:tire_catalog.field_product_product_brand_id
@@ -178,7 +178,7 @@ msgstr "Creado por"
 #: model:ir.model.fields,field_description:tire_catalog.field_tire_catalog_tire_brand_create_date
 #: model:ir.model.fields,field_description:tire_catalog.field_tire_catalog_tire_wizard_create_date
 msgid "Created on"
-msgstr "Creado el"
+msgstr "Creado en"
 
 #. module: tire_catalog
 #: model:ir.model.fields,field_description:tire_catalog.field_product_product_diameter
@@ -202,13 +202,13 @@ msgstr "¿Es un neumático?"
 #: model:ir.model.fields,field_description:tire_catalog.field_tire_catalog_tire_brand_write_uid
 #: model:ir.model.fields,field_description:tire_catalog.field_tire_catalog_tire_wizard_write_uid
 msgid "Last Updated by"
-msgstr "Última Actualización por"
+msgstr "Última actualización por"
 
 #. module: tire_catalog
 #: model:ir.model.fields,field_description:tire_catalog.field_tire_catalog_tire_brand_write_date
 #: model:ir.model.fields,field_description:tire_catalog.field_tire_catalog_tire_wizard_write_date
 msgid "Last Updated on"
-msgstr "Última Actualización el"
+msgstr "Última actualización en"
 
 #. module: tire_catalog
 #: model:ir.model,name:tire_catalog.model_product_product
@@ -234,7 +234,7 @@ msgstr "Temporada"
 #. module: tire_catalog
 #: selection:product.template,season:0
 msgid "Summer"
-msgstr "Summer"
+msgstr "Verano"
 
 #. module: tire_catalog
 #: model:ir.ui.view,arch_db:tire_catalog.product_template_form_view
