--- a/tire_catalog/i18n/es.po
+++ b/tire_catalog/i18n/es.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-09 11:28+0000\n"
-"PO-Revision-Date: 2018-07-09 13:29+0200\n"
+"PO-Revision-Date: 2018-07-09 14:23+0200\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -273,7 +273,7 @@ msgstr "Anchura"
 #. module: tire_catalog
 #: selection:product.template,season:0
 msgid "Winter"
-msgstr "Winter"
+msgstr "Invierno"
 
 #. module: tire_catalog
 #: model:ir.model,name:tire_catalog.model_tire_catalog_tire_brand
